📝 docs: Update Readme.md file

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Ahmedessam\\LaravelGitToolkit\\LaravelGitToolkitServiceProvider"
+                "Ahmedessam\\LaravelGitToolkit\\Providers\\LaravelGitToolkitServiceProvider"
             ]
         }
     },
