--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "illuminate/console": "^12.0|^11.0|^10.0|^9.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0|^11.0"
+    "phpunit/phpunit": "^10.0|^11.0",
+    "mockery/mockery": "^1.6",
+    "orchestra/testbench": "^9.0|^8.0|^7.0"
   },
   "autoload": {
     "psr-4": {
